--- a/src/pages/campaigns/view.html
+++ b/src/pages/campaigns/view.html
@@ -12,19 +12,6 @@
   }
   #map {
     height: 100%;
-    border: solid 5px black;
-  }
-  .toggle{
-    /*
-    background-color: black;
-    color: white;
-    border-style: solid;
-    border-color: black;
-    border-width: 4px;
-    border-radius: 2px;
-    height: 60px;
-    text-align: center;
-    */
   }
   .mapLayerButton{
 
@@ -103,7 +90,7 @@
         </ion-list>
       </div>
       <div ion-row style="margin-bottom: 2px;">
-        <button ion-item no-lines (click)="mapit(campaign.id)" class="mapItButton">Display on Map</button>
+        <button *ngIf="mapLoaded" ion-item no-lines (click)="mapit(campaign.id)" class="mapItButton">Display on Map</button>
       </div>
       
     </div>
