campaign maps now include geolocation, ios top bar miscolored, notification top right icon relaigned better and shrunk, ios campaigns/index auto-push view bug hopefully fixed

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,12 @@
 
   <!-- Google Maps API -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiufHSVNIdo9eDAIv76DPMMTgZNYmFud0&v=3.exp&libraries=places"></script>
+
+  <style>
+    .top-right{
+      display: inline-block;
+    }
+  </style>
  
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
