--- a/src/pages/notifications/view.html
+++ b/src/pages/notifications/view.html
@@ -1,11 +1,4 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-<style>
-.top-right{
-  position: absolute;
-  right: 10%;
-  top: 10%;
-}
-</style>
 
 <ion-header>
   <ion-navbar>
@@ -13,7 +6,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>    
     <ion-title>{{ 'page.notifications.preview' | translate }}</ion-title>
-    <div class="fa fa-3x fa-bell top-right" (click)="notifications()"></div>
+    <ion-buttons end><div class="fa fa-2x fa-bell top-right" (click)="notification()"></div></ion-buttons>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
