incorrect password notification, menu bar on privacy policy and TOS

--- a/src/pages/users/privacy.html
+++ b/src/pages/users/privacy.html
@@ -1,4 +1,14 @@
-<div style='padding:10px;'>
+
+<ion-header>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>    
+    <ion-title>Privacy Policy</ion-title>
+  </ion-navbar>
+</ion-header>
+<ion-content padding>
+  <div style='padding:10px;'>
 	<h1>Privacy Policy</h1>
 
 
@@ -109,3 +119,5 @@
 	        </ul>                              
 
 </div>
+</ion-content>
+
