--- a/src/pages/users/terms.html
+++ b/src/pages/users/terms.html
@@ -1,4 +1,14 @@
-<div style='padding:10px;'>
+
+<ion-header>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>    
+    <ion-title>Terms and Conditions</ion-title>
+  </ion-navbar>
+</ion-header>
+<ion-content padding>
+	<div style='padding:10px;'>
 	<h1>Terms and Conditions</h1>
 
 
@@ -46,3 +56,4 @@
 
 	<p>If you have any questions about these Terms, please contact us.</p>
 </div>
+</ion-content>
