--- a/src/pages/campaigns/index.html
+++ b/src/pages/campaigns/index.html
@@ -5,7 +5,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>    
-    <ion-title>{{ 'page.campaigns.list' | translate }}</ion-title>
+    <ion-title>DEBUG {{ 'page.campaigns.list' | translate }}</ion-title>
     <ion-buttons end><div class="fa fa-2x fa-bell top-right" (click)="notification()"></div></ion-buttons>
   </ion-navbar>
 </ion-header>
